@@ -176,6 +176,7 @@ debbugs (2.4.2) UNRELEASED; urgency=low
     - Make the version regex correct (closes: #425614)
     - Indicate the selected user (closes: #422934)
     - Use source package for usertags where possible (closes: #415933)
+    - Add PR-Package header for control messages (closes: #414023)
 
   
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
